Task (in polish) updated.

--- a/Zadanie/Zadanie 3.html
+++ b/Zadanie/Zadanie 3.html
@@ -1,10 +1,33 @@
 <html><head> 
  
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8"> 
-<title> Mondrain clusterin </title> 
+<title> Mondrain clustering </title> 
 </head><body id="" onload="" topmargin="50" leftmargin="100" rightmargin="100" bottommargin="50" bgcolor="#94a3a0"> 
 <font size=4>
 <h1 align="center"> Mondrain clustering  </h1>
+
+<h2>Terminy i punktacja</h2>
+
+<h4> Termin: poniedziałek 7 czerwca, 8:00. </h4>
+Uruchomić komendę:
+<pre>
+sbt "run -l TWOJ_LOGIN -p TWOJ_PROGRAM -seed 1 -n 10"
+</pre>
+Przesłać do mnie plik <i>results.csv</i> który powstanie oraz plik <i>alg.txt</i> w którym w 3 zdaniach opiszesz swój algorytm.
+
+<p>
+Punktacja: 0 - 3 punkty w zależności od wyniku. <br>
+Osoba która zrobi cokolwiek rozsądego może się spodziewać 3 pkt.
+
+<h4> Termin: koniec sesji </h4>
+Punktacja:
+<ul>
+  <li> 0 - 10 pkt za pracę - udokumentowane próby, źródła i powtarzalne eksperymenty
+  <li> 0 - 7 pkt za dobry wynik wg rankingu - mam nadzieję że conajmniej połowa dostanie 7/7
+  <li> 0 - 10 pkt (może nawet 20 pkt) - dodatkowe punkty dla czołówki (3 do 10 osób w zależności od wyników)
+</ul>
+<hr>
+
 <h2> Zadanie </h2>
 <p>
 <img align="right" src="img/seed57small.png">
