Added login support in file name.

--- a/Zadanie/Zadanie 3.html
+++ b/Zadanie/Zadanie 3.html
@@ -13,7 +13,7 @@ Uruchomić komendę:
 <pre>
 sbt "run -l TWOJ_LOGIN -p TWOJ_PROGRAM -seed 1 -n 10"
 </pre>
-Przesłać do mnie plik <i>results.csv</i> który powstanie oraz plik <i>alg.txt</i> w którym w 3 zdaniach opiszesz swój algorytm.
+Przesłać do mnie plik <i>results-TWOJ_LOGIN.csv</i> który powstanie oraz plik <i>alg-TWOJ_LOGIN.txt</i> w którym w 3 zdaniach opiszesz swój algorytm.
 
 <p>
 Punktacja: 0 - 3 punkty w zależności od wyniku. <br>
