Update tresci Zadania.

--- a/Zadanie/Zadanie 3.html
+++ b/Zadanie/Zadanie 3.html
@@ -20,13 +20,20 @@ W pierwszej linii opisu musi najdować się imię i nazwisko.
 Punktacja: 0 - 3 punkty w zależności od wyniku. <br>
 Osoba która zrobi cokolwiek rozsądego może się spodziewać 3 pkt.
 
+Anonimowe wyniki są <a href="http://spreadsheets.google.com/pub?key=tHAJehQ4HgPvBTLOyC33RBQ&single=true&gid=0&output=html">tutaj</a>.
+
 <h4> Termin: koniec sesji </h4>
 Punktacja:
 <ul>
-  <li> 0 - 10 pkt za pracę - udokumentowane próby, źródła i powtarzalne eksperymenty
+  <li>
+    0 - 10 pkt za pracę - Opis wszystkich algorytmów powinien znajdować się w pliku tekstowym lub PDF.
+    Powinien być na tyle szczegółowy by opierając się tylko na tym opisie można było zaimplementować podobny algorytm.
+    Wszystkie triki zwiększające skuteczność powinny być udokumentowane.
+    Wyniki eksperymentów są konieczne. Wszystkie testowane algorytmy powinny być możliwe do uruchomienia z lini poleceń. (bez przekompilowywania)
   <li> 0 - 7 pkt za dobry wynik wg rankingu - mam nadzieję że conajmniej połowa dostanie 7/7
   <li> 0 - 10 pkt (może nawet 20 pkt) - dodatkowe punkty dla czołówki (3 do 10 osób w zależności od wyników)
 </ul>
+
 <hr>
 
 <h2> Zadanie </h2>
