Dodatkowe punkty w tresci zadania.

--- a/Zadanie/Zadanie 3.html
+++ b/Zadanie/Zadanie 3.html
@@ -31,6 +31,9 @@ Punktacja:
     Wszystkie triki zwiększające skuteczność powinny być udokumentowane.
     Wyniki eksperymentów są konieczne. Wszystkie testowane algorytmy powinny być możliwe do uruchomienia z lini poleceń. (bez przekompilowywania)
   <li> 0 - 7 pkt za dobry wynik wg rankingu - mam nadzieję że conajmniej połowa dostanie 7/7
+  <li> 0 - 10 pkt - dodatkowe punkty za wyjątkowo dobrą dokumentację -
+    pdf, wykresy, precyzyjne opisy, wszystko czytelne i proste. Suma
+    tego i powyzszych punktów nie przekroczy 20 pkt.
   <li> 0 - 10 pkt (może nawet 20 pkt) - dodatkowe punkty dla czołówki (3 do 10 osób w zależności od wyników)
 </ul>
 
