--- a/Zadanie/Zadanie 3.html
+++ b/Zadanie/Zadanie 3.html
@@ -6,6 +6,10 @@
 <font size=4>
 <h1 align="center"> Mondrain clustering  </h1>
 
+<h2> "News" </h2>
+
+Jezeli kogos irytuje brak "diff'a" na tresci zadania, proponuje przegladanie tresci zadania w repozytorium wizualizatora za pomoca polecenia git.
+
 <h2>Terminy i punktacja</h2>
 
 <h4> Termin: poniedziałek 7 czerwca, 8:00. </h4>
@@ -26,16 +30,29 @@ Anonimowe wyniki są <a href="http://spreadsheets.google.com/pub?key=tHAJehQ4HgP
 Punktacja:
 <ul>
   <li>
-    0 - 10 pkt za pracę - Opis wszystkich algorytmów powinien znajdować się w pliku tekstowym lub PDF.
-    Powinien być na tyle szczegółowy by opierając się tylko na tym opisie można było zaimplementować podobny algorytm.
-    Wszystkie triki zwiększające skuteczność powinny być udokumentowane.
-    Wyniki eksperymentów są konieczne. Wszystkie testowane algorytmy powinny być możliwe do uruchomienia z lini poleceń. (bez przekompilowywania)
+    0 - 10 pkt za pracę - Opis wszystkich algorytmów powinien znajdować się w pliku tekstowym lub PDF. <br>
+    Powinien być na tyle szczegółowy by opierając się tylko na tym opisie można było zaimplementować podobny algorytm. <br>
+    Wszystkie kroki powinny odnosic sie do konkretnych funkcjii w kodzie zrodlowym. <br>
+    Wszystkie triki (usprawnienia algorymu nie zmieniajace glowej idei) zwiększające skuteczność powinny być takze udokumentowane z odnosnikami do zrodel. <br>
+    Wyniki eksperymentów są konieczne. Wszystkie testowane algorytmy powinny być możliwe do uruchomienia z lini poleceń. (bez przekompilowywania) <br>
+    <i> W przypadku dobrych wynikow (powiedzmy top 50%) wystarczy opis i uruchamialność ostatecznego algorytmu. </i>
   <li> 0 - 7 pkt za dobry wynik wg rankingu - mam nadzieję że conajmniej połowa dostanie 7/7
   <li> 0 - 10 pkt - dodatkowe punkty za wyjątkowo dobrą dokumentację -
     pdf, wykresy, precyzyjne opisy, wszystko czytelne i proste. Suma
     tego i powyzszych punktów nie przekroczy 20 pkt.
   <li> 0 - 10 pkt (może nawet 20 pkt) - dodatkowe punkty dla czołówki (3 do 10 osób w zależności od wyników)
 </ul>
+<p>
+<h5>Przesyłanie rozwiązań:</h5> Pojedynczy katalog o nazwie takiej jak
+wasz login, spakowany do formatu zip lub tgz. Musi zawierać jedno
+krokową instrukcje utworzenia binarki (jeżeli dotyczy) (najlepiej
+make).  Binarka powinna mieć nazwę taką jak wasz login i znajdować się
+bezpośrednio w "głównym" katalogu. Uruchomienie z sędzią powinno być
+możliwe bez dodatkowych parametrów.
+
+Tak spakowany katalog przesyłać mailem na adres lew@mimuw.edu.pl. <br>
+Temat maila(bez cudzysłowów): "SUS Zadanie 3" <br>
+Treść maila: <b>pusta</b>
 
 <hr>
 
